
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pid_t ;


 int EXIT_FAILURE ;
 int exec_shell () ;
 int exit (int ) ;
 int fork () ;
 int perror (char*) ;

void fork_shell() {
 pid_t rv;

 rv = fork();
 if (rv == -1) {
  perror("[-] fork()");
  exit(EXIT_FAILURE);
 }

 if (rv == 0) {
  exec_shell();
 }
}
